atualizando a pagina dragon ball
atualizando a pagina do dragon ball ...

--- a/links/Dragon-ball.html
+++ b/links/Dragon-ball.html
@@ -130,11 +130,26 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
     Passam se 4 anos de paz e os amigos se reúnem para enfrentar um novo inimigo, os Sayajins.</article>
       </section>
 <aside>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, fugiat officiis quasi impedit culpa cum.</aside>
+ 
+  <div class="img">
+    <figcaption>  <img  class="img-side" src="../img/3.jpg" alt="Dragon Ball" title="personagens do anime">
+    </img></figcaption>
+
+</div>
+</aside>
       <aside>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, fugiat officiis quasi impedit culpa cum.</aside>
+        <div class="img">
+          <figcaption>  <img  class="img-side" src="../img/pai_pai.png" alt="Dragon Ball" title="personagens do anime">
+          </img></figcaption>
+        </aside>
 <aside>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, fugiat officiis quasi impedit culpa cum.</aside>
+  <div class="img">
+    <figcaption>  <img  class="img-side" src="../img/5.png" alt="Dragon Ball" title="personagens do anime">
+    </img></figcaption></aside>
+    <aside>
+      <div class="img">
+        <figcaption>  <img  class="img-side" src="../img/4.jpg" alt="Dragon Ball" title="personagens do anime">
+        </img></figcaption></aside>
       </main>
       <div class="clear"></div>
   <footer id="rodape" class="clear">Todos direitos reservados&copy; 2022</footer>
