Modificações no design da pagina
Modificações no design da pagina

--- a/links/Dragon-ball.html
+++ b/links/Dragon-ball.html
@@ -22,14 +22,15 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
       &#9776; 
       </div>
       
-    <div id="logotipo"><img src="../img/1.jpg" class="img-logotipo" ></div>
+    
     <div id="menu">
+      <div id="logotipo"><img src="../img/1.jpg" class="img-logotipo" ></div>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="Dragon-ball-Z.html">Dragon ball Z</a></li>
-          <li><a href="Dragon-ball-Super.html">Dragon ball Super</a></li>
-          <li><a href="contatos.html">Contato</a></li>
+          <li><a href="../index.html"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
+          <li><a href="Dragon-ball.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z</a></li>
+          <li><a href="Dragon-ball-Z.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
+          <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Contato</a></li>
         </ul>
       </nav>
     </div>
