--- a/links/contatos.html
+++ b/links/contatos.html
@@ -21,14 +21,15 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
     <div id="botaoresponsive" onClick="MM_DW_effectBlind($('#menu'),'toggle','blind','up',500)">
       &#9776; 
       </div>
-      
-    <div id="logotipo"><img src="../img/1.png" width="148" height="73"></div>
     <div id="menu">
+      <div id="logotipo"><img src="../img/1.jpg" class="img-logotipo"></div>
       <nav>
         <ul>
-          <li><a href="../index.html">Página principal</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="parceiros.html">Parceiros</a></li>
+          <li><a href="../index.html"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
+            <li><a href="Dragon-ball.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball</img> </a></li>
+            <li><a href="Dragon-ball-Z.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z </legend></a></li>
+            <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
+            <li><a href="#"><img src="../img/4estrela.png" class="img-icon">Contato</a></li>
         </ul>
       </nav>
     </div>
