--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         &#9776;
       </div>
 
-      <div id="logotipo"><img src="img/1.jpg" class="img-logotipo"></div>
+     
       <div id="menu">
+        <div id="logotipo"><img src="img/1.jpg" class="img-logotipo"></div>
         <nav>
+          
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="links/Dragon-ball.html">Dragon ball</a></li>
-            <li><a href="links/Dragon-ball-Z.html">Dragon ball Z</a></li>
-            <li><a href="links/Dragon-ball-Super.html">Dragon ball Super</a></li>
-            <li><a href="links/contatos.html">Contato</a></li>
+            <li><a href="#"><img src="img/4estrela.png" class="img-icon">Home</a></li>
+            <li><a href="links/Dragon-ball.html"><img src="img/4estrela.png" class="img-icon">Dragon ball</img> </a></li>
+            <li><a href="links/Dragon-ball-Z.html"><img src="img/4estrela.png" class="img-icon">Dragon ball Z </legend></a></li>
+            <li><a href="links/Dragon-ball-Super.html"><img src="img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
+            <li><a href="links/contatos.html"><img src="img/4estrela.png" class="img-icon">Contato</a></li>
           </ul>
         </nav>
       </div>
