--- a/links/Dragon-ball.html
+++ b/links/Dragon-ball.html
@@ -28,9 +28,11 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
       <nav>
         <ul>
           <li><a href="../index.html"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
-          <li><a href="Dragon-ball.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z</a></li>
-          <li><a href="Dragon-ball-Z.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
-          <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Contato</a></li>
+          <li><a href="Dragon-ball-Z.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z</a></li>
+          <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
+          <li><a href="contatos.html"><img src="../img/4estrela.png" class="img-icon"> Contato</a></li>
+          
+          
         </ul>
       </nav>
     </div>
