modificações no layout e css
Foi feito modificações no layout , responsividade do site , alteração de linhas no css e o caminho do botão de responsividade .

--- a/links/Dragon-ball-Z.html
+++ b/links/Dragon-ball-Z.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="../img/icon.png">
   <link href="../css/estilo.css" rel="stylesheet" type="text/css">
-  <script src="jQueryAssets/jquery-1.11.1.min.js"></script>
-  <script src="jQueryAssets/jquery-ui-effects.custom.min.js"></script>
+  <script src="../jQueryAssets/jquery-1.11.1.min.js"></script>
+  <script src="../jQueryAssets/jquery-ui-effects.custom.min.js"></script>
   <script type="text/javascript">
     function MM_DW_effectBlind(obj, method, effect, dir, speed) {
       obj[method](effect, { direction: dir }, speed);
@@ -25,14 +25,14 @@
 
 
       <div id="menu">
-        <div id="logotipo"><img src="../img/1.jpg" class="img-logotipo"></div>
+        <div id="logotipo"><img src="../img/1.png" class="img-logotipo"></div>
         <nav>
           <ul>
-            <li><a href="../index.html"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
-            <li><a href="Dragon-ball.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball</a></li>
-            <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a>
+            <li><a href="../index.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
+            <li><a href="Dragon-ball.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Dragon ball</a></li>
+            <li><a href="Dragon-ball-Super.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a>
             </li>
-            <li><a href="contatos.html"><img src="../img/4estrela.png" class="img-icon">Contato</a></li>
+            <li><a href="contatos.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Contato</a></li>
           </ul>
         </nav>
       </div>
