--- a/links/contatos.html
+++ b/links/contatos.html
@@ -22,13 +22,13 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
       &#9776; 
       </div>
     <div id="menu">
-      <div id="logotipo"><img src="../img/1.jpg" class="img-logotipo"></div>
+      <div id="logotipo"><img src="../img/1.png" class="img-logotipo"></div>
       <nav>
         <ul>
-          <li><a href="../index.html"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
-            <li><a href="Dragon-ball.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball</img> </a></li>
-            <li><a href="Dragon-ball-Z.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z </legend></a></li>
-            <li><a href="Dragon-ball-Super.html"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
+          <li><a href="../index.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Home</a></li>
+            <li><a href="Dragon-ball.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Dragon ball</img> </a></li>
+            <li><a href="Dragon-ball-Z.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Dragon ball Z </legend></a></li>
+            <li><a href="Dragon-ball-Super.html" class="menu_hover"><img src="../img/4estrela.png" class="img-icon">Dragon ball Super</a></li>
             
         </ul>
       </nav>
