--- a/links/obrigado.html
+++ b/links/obrigado.html
@@ -18,7 +18,7 @@
 
 
 <p>
-<a href="../index.html">Pagina principal</a></p>
+<a href="../index.html" class="menu_hover">Pagina principal</a></p>
 
 
 
