edição do footer
edição do footer no desktop e no mobile , mais acrescimo do hover .

--- a/index.html
+++ b/index.html
@@ -145,7 +145,21 @@
               </img></figcaption></aside>
     </main>
     <div class="clear"> </div>
-    <footer id="rodape" class="clear">Todos direitos reservados&copy; 2022</footer>
+    <footer id="rodape" class="clear">
+      <div id="footer" class="mobile">
+      <nav >
+        
+        <ul>
+          <li><a href="https://instagram.com/davidsonsantos001" class="footer_hover"><img src="img/instagram.ico" class="img-footer"></img> </a></li>
+          <li><a href="https://discord.com/channels/@L0RD_HUNK#1725" class="footer_hover"><img src="img/discord.ico" class="img-footer"></legend></a></li>
+          <li><a href="https://github.com/davidson-santos001/" class="footer_hover"><img src="img/github.ico" class="img-footer"></a></li>
+          <li><a href="https://www.linkedin.com/in/davidson--santos" class="footer_hover"><img src="img/linkedin.ico" class="img-footer"></a></li>
+          <li><a href="#" class="footer_hover"><img src="img/footer.png" class="img-goku_footer"></a></li>
+        </ul>
+      </nav>
+      Todos direitos reservados&copy; 2022
+    </div>
+    </footer>
 
   </div>
 </body>
