mudança no footer
mundança no rodapé

--- a/links/Dragon-ball.html
+++ b/links/Dragon-ball.html
@@ -152,9 +152,9 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
         </img></figcaption></aside>
       </main>
       <div class="clear"> </div>
-    <footer id="rodape" class="clear">
-      <div id="footer">
-        <nav>
+      <footer id="rodape" class="clear">
+        <div id="footer" class="mobile">
+        <nav >
           
           <ul>
             <li><a href="https://instagram.com/davidsonsantos001" class="footer_hover"><img src="../img/instagram.ico" class="img-footer"></img> </a></li>
@@ -167,7 +167,8 @@ function MM_DW_effectBlind(obj,method,effect,dir,speed)
         Todos direitos reservados&copy; 2022
       </div>
       </footer>
-    
-</div>
-</body>
-</html>
+  
+    </div>
+  </body>
+  
+  </html>
